--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "axios": "^1.9.0",
+    "express": "^4.21.1",
+    "react-router-dom": "^7.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
