--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "frontend",
+  "name": "campus-scavenger-hunt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -38,4 +36,4 @@
       "last 1 safari version"
     ]
   }
-}
+} 
